test/Fail/Issue2642.err
Issue2642.agda:5.5-7.8: error: [DuplicateFields]
Duplicate fields in record: F G
when scope checking the declaration
  record R where
    field
      F : Set
      F : Set
      G : Set
      G : Set
